--- a/plugins/myplugin/pom.xml
+++ b/plugins/myplugin/pom.xml
@@ -31,7 +31,7 @@
                     <!-- Change the output directory -->
                     <outputDirectory>${project.basedir}/../</outputDirectory>
                     <!-- Change the JAR file name -->
-                    <finalName>MyPlugin</finalName>
+                    <finalName>LibraryMenu</finalName>
                 </configuration>
             </plugin>
         </plugins>
