--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
     <modules>
         <module>interfaces</module>
         <module>app</module>
-        <module>plugins/myplugin</module>
+        <module>plugins/LibraryMenu</module>
+        <module>plugins/UsersManagment</module>
     </modules>
 
     <properties>
