--- a/plugins/LibraryMenu/pom.xml
+++ b/plugins/LibraryMenu/pom.xml
@@ -29,7 +29,7 @@
                 <version>3.2.0</version>
                 <configuration>
                     <!-- Change the output directory -->
-                    <outputDirectory>${project.basedir}/../</outputDirectory>
+                    <outputDirectory>${project.basedir}/../jarPlugins</outputDirectory>
                     <!-- Change the JAR file name -->
                     <finalName>LibraryMenu</finalName>
                 </configuration>
