--- a/plugins/UsersManagmentMenu/pom.xml
+++ b/plugins/UsersManagmentMenu/pom.xml
@@ -7,9 +7,10 @@
         <groupId>br.edu.ifba.inf008</groupId>
         <artifactId>parent-project</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../..</relativePath>
     </parent>
 
-    <artifactId>executable</artifactId>
+    <artifactId>UsersManagment</artifactId>
 
     <dependencies>
         <dependency>
@@ -17,30 +18,20 @@
             <artifactId>interfaces</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.10.0</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-
+            <!-- Configure maven-jar-plugin -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
                 <configuration>
-                    <mainClass>br.edu.ifba.inf008.App</mainClass>
-		    <!--<arguments>
-                        <argument>arg1</argument>
-		    </arguments>-->
+                    <!-- Change the output directory -->
+                    <outputDirectory>${project.basedir}/../jarPlugins</outputDirectory>
+                    <!-- Change the JAR file name -->
+                    <finalName>UsersManagmentMenu</finalName>
                 </configuration>
             </plugin>
         </plugins>
