--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,22 @@
         <module>interfaces</module>
         <module>app</module>
         <module>plugins/LibraryMenu</module>
-        <module>plugins/UsersManagment</module>
+        <module>plugins/UsersManagmentMenu</module>
     </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.mariadb.jdbc</groupId>
+                <artifactId>mariadb-java-client</artifactId>
+                <version>3.3.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
