--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>plugins/LibraryMenu</module>
         <module>plugins/UserManagmentMenu</module>
         <module>plugins/BookManagmentMenu</module>
+        <module>plugins/LoanManagmentMenu</module>
     </modules>
 
     <properties>
