--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,12 +17,12 @@ services:
       timeout: 5s
       retries: 5
 
-  app:
-    build: . # Constrói a imagem Docker a partir do Dockerfile no diretório atual
-    container_name: bookstore-app
-    depends_on:
-      mariadb:
-        condition: service_healthy # Garante que o banco de dados esteja pronto antes de iniciar a aplicação
+  #app:
+    #build: . 
+    #container_name: bookstore-app
+    #depends_on:
+      #mariadb:
+        #condition: service_healthy # Garante que o banco de dados esteja pronto antes de iniciar a aplicação
     # Se sua aplicação Java tiver uma interface gráfica que precise ser acessada,
     # você precisaria de uma configuração de X11 forwarding ou um servidor VNC no contêiner,
     # o que torna a configuração mais complexa.
