--- a/plugins/LoanManagmentMenu/pom.xml
+++ b/plugins/LoanManagmentMenu/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../..</relativePath>
     </parent>
 
-    <artifactId>LoansManagment</artifactId>
+    <artifactId>LoanManagmentMenu</artifactId>
 
     <dependencies>
         <dependency>
@@ -25,12 +25,12 @@
         </dependency>
         <dependency>
             <groupId>br.edu.ifba.inf008</groupId>
-            <artifactId>BooksManagment</artifactId>
+            <artifactId>BookManagmentMenu</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>br.edu.ifba.inf008</groupId>
-            <artifactId>UsersManagment</artifactId>
+            <artifactId>UserManagmentMenu</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
